Rendered basics of a dropdown menu for zipcodes

--- a/location.html
+++ b/location.html
@@ -19,9 +19,13 @@
 	<main>
 		<h1>Please Pick Your ZipCode</h1>
 		<!-- random fact -->
+
 		<form>
+			<label>Drop Down Menu</label>
 			<select id="dropdown">
+				
 			</select>
+
 		</form>
 		<!-- iframe for map -->
 	</main>
