rendered list of locations to the page

--- a/location.html
+++ b/location.html
@@ -23,10 +23,10 @@
 		<form>
 			<label>Drop Down Menu</label>
 			<select id="dropdown">
-				
 			</select>
-
 		</form>
+		<ul id="locationList">
+		</ul>
 		<!-- iframe for map -->
 	</main>
 	
