added a print button for the page

--- a/location.html
+++ b/location.html
@@ -26,6 +26,7 @@
 				<option value="default">[Select your Zip]</option>
 			</select>
 		</form>
+		<button onclick="window.print()">Print This Page</button>
 		<ul id="locationList">
 		</ul>
 		<!-- iframe for map -->
