created an h2 element that renders what the last pulldown menu choice was

--- a/location.html
+++ b/location.html
@@ -19,7 +19,7 @@
 	<main>
 		<h1>Please Pick Your ZipCode</h1>
 		<!-- random fact -->
-
+		<h2 id="zipcode-notification"></h2>
 		<form>
 			<label>Drop Down Menu</label>
 			<select id="dropdown">
