--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -80,7 +80,7 @@
 
     <footer>
         <!-- <script src="js/shopping.js" type="text/javascript"></script> -->
-        <script src="shoppingTest.js" type="text/javascript"></script>
+        <script src="js/shopping.js" type="text/javascript"></script>
 
     </footer>
 </body>
