Added links to buttons on resources page

--- a/resources.html
+++ b/resources.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Title for my website</title>
+  <title>Resources</title>
   <link rel="stylesheet" type="text/css" href="css/reset.css" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
@@ -21,11 +21,14 @@
   <main>
     <h2>More Resources for Earthquake Prep</h2>
     <h3>Where are earthquakes happening now?</h3>
-    <p>Find out here: </p><button>Live Earthquake Map</button>
+    <button onclick="window.location.href ='https://pnsn.org/';">Live Earthquake Map</button>
     <h3>Get involved in a discussion group:</h3>
-    <p>Facebook</p><button>PNW Earthquake Discussion Group</button>
+    <button onclick="window.location.href ='https://www.facebook.com/groups/thePNSN/?ref=bookmarks';">PNW Earthquake
+      Discussion Group</button>
     <h3>Get more prepared </h3>
-    <button>Seattle.gov Be Prepared</button>
+    <button
+      onclick="window.location.href ='https://www.seattle.gov/emergency-management/prepare/prepare-yourself';">Seattle.gov
+      Be Prepared</button>
     <div>
       <h3>Earthquake Simulation - Why we got rid of the viaduct.</h3>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/hos_uIKwC-c" frameborder="0"
