--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -21,25 +21,23 @@
     <main>
         <h3>Numbers are based on the estimated three weeks of necessary supplies during a disaster -- LINK TO REF</h3>
         <h2>What is the size of your family?</h2>
-        <form onsubmit="calculateFamilyTotals()">
-            <input type="text" name="familyNumber"><br>
-            <section id="familyForm">
-                <form id="familySize-form">
-                    <input type="text" id="family-number" name="familyNumber"><br>
-                    <button type="submit" name="familyNumberButton">Submit Family Number</button>
-                    <!-- Have alert if !number -->
-                </form>
-            </section>
-            <form id="foodList">
-                <fieldset id="foodFieldset">
-
-                </fieldset>
+        <section id="familyForm">
+            <form>
+                <input type="text" name="familyNumber"><br>
+                <button type="submit" name="familyNumberButton">Submit Family Number</button>
+                <!-- Have alert if !number -->
             </form>
+        </section>
+        <form id="foodList">
+            <fieldset id="foodFieldset">
+
+            </fieldset>
+        </form>
     </main>
 
     <footer>
         <!-- <script src="js/shopping.js" type="text/javascript"></script> -->
-        <script src="shoppingTest.js" type="text/javascript"></script>
+        <script src="js/shopping.js" type="text/javascript"></script>
 
     </footer>
 </body>
