--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -5,6 +5,7 @@
     <title>Title for my website</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/shopping.css" />
 </head>
 
 <body>
