--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
 </head>
 <body>
 	<header>
-		<nav>
-			<ul>
-				<li><a href="#">link 1</a></li>
-				<li><a href="#">link 1</a></li>
-				<li><a href="#">link 1</a></li>
-			</ul>
+		<nav id="navBar">
 		</nav>
 	</header>
 	
@@ -21,6 +16,7 @@
 	
 	<footer>
 		<script src="js/app.js" type="text/javascript"></script>
+		<script src="js/navbar.js" type="text/javascript"></script>
 	</footer>
 </body>
 </html>
