--- a/location.html
+++ b/location.html
@@ -8,15 +8,10 @@
 </head>
 
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="#">link 1</a></li>
-        <li><a href="#">link 1</a></li>
-        <li><a href="#">link 1</a></li>
-      </ul>
-    </nav>
-  </header>
+	<header>
+		<nav id="navBar">
+		</nav>
+	</header>
 
   <main>
     <h1>Please Pick Your ZipCode</h1>
