--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -9,15 +9,10 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#">link 1</a></li>
-                <li><a href="#">link 1</a></li>
-                <li><a href="#">link 1</a></li>
-            </ul>
-        </nav>
-    </header>
+	<header>
+		<nav id="navBar">
+		</nav>
+	</header>
 
     <main>
         <h3>Numbers are based on the estimated three weeks of necessary supplies during a disaster -- LINK TO REF</h3>
