--- a/aboutus.html
+++ b/aboutus.html
@@ -9,12 +9,7 @@
 </head>
 <body>
 	<header>
-		<nav>
-			<ul>
-				<li><a href="#">link 1</a></li>
-				<li><a href="#">link 1</a></li>
-				<li><a href="#">link 1</a></li>
-			</ul>
+		<nav id="navBar">
 		</nav>
 	</header>
 	
