--- a/aboutus.html
+++ b/aboutus.html
@@ -65,6 +65,7 @@
 	<footer>
     <!-- <script src="js/app.js" type="text/javascript"></script> -->
     <script src="js/aboutus.js" type="text/javascript"></script>
+    <script src="js/navbar.js" type="text/javascript"></script>
 	</footer>
 </body>
 </html>
