--- a/location.html
+++ b/location.html
@@ -36,6 +36,7 @@
 
   <footer>
     <script src=" js/app.js" type="text/javascript"></script>
+    <script src="js/navbar.js" type="text/javascript"></script>
   </footer>
 </body>
 
