--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -34,6 +34,7 @@
     <footer>
         <!-- <script src="js/shopping.js" type="text/javascript"></script> -->
         <script src="js/shopping.js" type="text/javascript"></script>
+        <script src="js/navbar.js" type="text/javascript"></script>
 
     </footer>
 </body>
