most of css done, locations and shopping list need to be edited. Mob Programmed This file.

--- a/location.html
+++ b/location.html
@@ -27,7 +27,7 @@
     <ul id="locationList">
     </ul>
     <!-- iframe for map -->
-    <div>
+    <div id="iframediv">
       <h3>For all Emergency Hub Locations, please see the map below.</h3>
       <iframe src="https://www.google.com/maps/d/embed?mid=1mtS4LK_-BMm2TqP2su-Y1cIZUOk" width="640"
         height="480"></iframe>
