--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
 		</nav>
 	</header>
 	
+
+		<img id="hero" src= "img/logo.png"/>
+		<div>
+
+		</div>
 	<main>
+		
 	</main>
-	
 	<footer>
 		<script src="js/app.js" type="text/javascript"></script>
 		<script src="js/navbar.js" type="text/javascript"></script>
