--- a/resources.html
+++ b/resources.html
@@ -5,39 +5,45 @@
   <title>Resources</title>
   <link rel="stylesheet" type="text/css" href="css/reset.css" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="css/resources.css" />
 </head>
 
 <body>
-	<header>
-		<nav id="navBar">
-		</nav>
-	</header>
+  <header>
+    <nav id="navBar">
+    </nav>
+  </header>
 
-  <main>
-    <h2>More Resources for Earthquake Prep</h2>
-    <h3>Where are earthquakes happening now?</h3>
-    <button onclick="window.location.href ='https://pnsn.org/';">Live Earthquake Map</button>
-    <h3>Get involved in a discussion group:</h3>
-    <button onclick="window.location.href ='https://www.facebook.com/groups/thePNSN/?ref=bookmarks';">PNW Earthquake
-      Discussion Group</button>
-    <h3>Get more prepared </h3>
-    <button
-      onclick="window.location.href ='https://www.seattle.gov/emergency-management/prepare/prepare-yourself';">Seattle.gov
-      Be Prepared</button>
-    <div>
-      <h3>Earthquake Simulation - Why we got rid of the viaduct.</h3>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/hos_uIKwC-c" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <main id="resources-main">
+    <h2 id="h2-style">More Resources for Earthquake Prep</h2>
+    <div id="link-box">
+      <h3 class="h3-style">Websites</h3>
 
-      <h3>Cascadia Subduction Zone - BBC Documentary</h3>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/VR95-T6DvQM" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h4 class="h4-style">Where are earthquakes happening now?</h3>
+        <a href="https://pnsn.org/">Live Earthquake Map</a>
+
+        <h4 class="h4-style">Get involved in a discussion group at</h3>
+          <a href="https://www.facebook.com/groups/thePNSN/?ref=bookmarks">PNW Earthquake
+            Discussion Group</a>
+          <h4 class="h4-style">Get more prepared at </h3>
+            <a href="https://www.seattle.gov/emergency-management/prepare/prepare-yourself">Seattle.gov
+              Be Prepared</a>
+    </div>
+    <div id="video-box">
+      <h3 class="h3-style">Videos</h3>
+      <h4 class="h4-style">Earthquake Simulation - Why we got rid of the viaduct.</h3>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/hos_uIKwC-c" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <h4 class="h4-style">Cascadia Subduction Zone - BBC Documentary</h3>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/VR95-T6DvQM" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   </main>
 
 
   <footer>
-      <script src="js/navbar.js" type="text/javascript"></script>
+    <script src="js/navbar.js" type="text/javascript"></script>
   </footer>
 </body>
 
