Added scrolling facts and applied to index

--- a/aboutus.html
+++ b/aboutus.html
@@ -43,7 +43,7 @@
     <div class="mySlides fade">
         <div class="numbertext">5 / 5</div>
         <img src="img/zerek.png" style="width:100%">
-        <div class="text">Egestas pretium aenean pharetra magna. Risus sed vulputate odio ut enim blandit volutpat maecenas. Ultrices gravida dictum fusce ut. Aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc sed. Tellus at urna condimentum mattis pellentesque id nibh.</div>
+        <div class="text">My name is Zerek Cover, I am a JavaScript Developer currently enrolled at CodeFellows. I enjoy long walks on the beach through a pixelated screen while slaying dragons. My goals are to complete the CodeFellows boot camp and be the first in my family in 2 generations to truly have a trade-related career on my shoulders. I hope one day to take all of what I've learned, and be able to teach it to those around me, as well as the younger generation.</div>
       </div>
   
     <!-- Next and previous buttons -->
