--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
   <title>Title for my website</title>
   <link rel="stylesheet" type="text/css" href="css/reset.css" />
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
+	<link rel="stylesheet" type="text/css" href="css/facts.css" />
 </head>
 <body>
 	<header>
 		<nav id="navBar">
 		</nav>
+		<div id="fact-container">
+    </div>
+
+		</span>
 	</header>
 	
 
@@ -22,6 +27,7 @@
 	<footer>
 		<script src="js/app.js" type="text/javascript"></script>
 		<script src="js/navbar.js" type="text/javascript"></script>
+		<script src="js/facts.js" type="text/javascript"></script>
 	</footer>
 </body>
 </html>
