Applied mob CSS formatting

--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -15,7 +15,7 @@
     </header>
 
     <main>
-        <h3>Numbers are based on the estimated three weeks of necessary supplies during a disaster -- LINK TO REF</h3>
+        <h3>If an earthquake happens, you are going to need to be prepared and want at least three weeks of supplies.  Here's a list of items to consider buying based on Seattle.gov recommendations.  If you want more info on how to prepare for a natural disaster, check out our <a href="resources.html">resources page</a>.</h3>
         <h2>What is the size of your family?</h2>
         <section id="familyForm">
             <form>
