--- a/index.html
+++ b/index.html
@@ -5,29 +5,32 @@
   <link rel="stylesheet" type="text/css" href="css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 	<link rel="stylesheet" type="text/css" href="css/facts.css" />
+	<link href="https://fonts.googleapis.com/css?family=Marcellus+SC&display=swap" rel="stylesheet">
 </head>
 <body>
 	<header>
 		<nav id="navBar">
+			<div id="fact-container">
+			</div>
 		</nav>
-		<div id="fact-container">
-    </div>
 
 		</span>
 	</header>
 	
 
 		<img id="hero" src= "img/logo.png"/>
-		<div>
-
+		<div id="herotext">
+			<h1>Seattle Earthquake Awareness</h1>
+			<h4>getting ready for the big one</h4>
+			<!--Do we want the text here?-->
 		</div>
 	<main>
 		
 	</main>
 	<footer>
-		<script src="js/app.js" type="text/javascript"></script>
+		<!-- <script src="js/app.js" type="text/javascript"></script> -->
 		<script src="js/navbar.js" type="text/javascript"></script>
-		<script src="js/facts.js" type="text/javascript"></script>
+		<!-- <script src="js/facts.js" type="text/javascript"></script> -->
 	</footer>
 </body>
 </html>
