--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -5,6 +5,7 @@
     <title>Title for my website</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/facts.css" />
     <link rel="stylesheet" type="text/css" href="css/shopping.css" />
 </head>
 
@@ -12,10 +13,13 @@
     <header>
         <nav id="navBar">
         </nav>
+        <div id="fact-container">
+        </div>
     </header>
 
     <main>
-        <h3>If an earthquake happens, you are going to need to be prepared and want at least three weeks of supplies.  Here's a list of items to consider buying based on Seattle.gov recommendations.  If you want more info on how to prepare for a natural disaster, check out our <a href="resources.html">resources page</a>.</h3>
+        <h3>If an earthquake happens, you are going to need to be prepared and want at least three weeks of supplies. Here's a list of items to consider buying based on Seattle.gov recommendations. If you want more info on how to prepare for a natural disaster,
+            check out our <a href="resources.html">resources page</a>.</h3>
         <h2>What is the size of your family?</h2>
         <section id="familyForm">
             <form>
@@ -33,7 +37,7 @@
         <!-- <script src="js/shopping.js" type="text/javascript"></script> -->
         <script src="js/shopping.js" type="text/javascript"></script>
         <script src="js/navbar.js" type="text/javascript"></script>
-
+        <script src="js/facts.js" type="text/javascript"></script>
     </footer>
 </body>
 
