--- a/aboutus.html
+++ b/aboutus.html
@@ -1,71 +1,64 @@
 <!-- https://www.w3schools.com/howto/howto_js_slideshow.asp -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Title for my website</title>
-  <link rel="stylesheet" type="text/css" href="css/reset.css" />
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
-  <link rel="stylesheet" type="text/css" href="css/aboutus.css" />
-</head>
-<body>
-	<header>
-		<nav id="navBar">
-		</nav>
-	</header>
-	
-	<main>
-     <!-- Slideshow container -->
-<div class="slideshow-container">
 
-    <!-- Full-width images with number and caption text -->
-    <div class="mySlides fade">
-      <div class="numbertext">1 / 5</div>
-      <img src="img/jon.png" style="width:100%">
-      <div class="text">Jon is a 29 year old IT professional and software developer who has spent the last 9 years of his life serving in the U.S. Navy.  He lived in Japan for 6 years but can barely speak or read Japanese!  In his free time, he can be found off-roading in his Suzuki Jimny or at home, developing software.  His goal after completing his school is to get a job in Tokyo.</div>
-    </div>
-  
-    <div class="mySlides fade">
-      <div class="numbertext">2 / 5</div>
-      <img src="img/peter.png" style="width:100%">
-      <div class="text">Mauris a diam maecenas sed enim ut sem viverra aliquet. Leo vel orci porta non. Pretium vulputate sapien nec sagittis aliquam malesuada. Netus et malesuada fames ac turpis. Nunc vel risus commodo viverra maecenas accumsan lacus vel. Egestas diam in arcu cursus euismod quis viverra nibh cras.</div>
-    </div>
-  
-    <div class="mySlides fade">
-      <div class="numbertext">3 / 5</div>
-      <img src="img/sharina.png" style="width:100%">
-      <div class="text">Sharina Stubbs is a software developer who is disturbingly fascinated by natural disasters, particularly volcanic eruptions, tsunamis and earthquakes. She is that person who will point out all the unreinforced masonry buildings (URMs) in Seattle, monitor her elevation in case of a tsunami, and stash food like a squirrel in case the world ends.</div>
-    </div>
-    <div class="mySlides fade">
-        <div class="numbertext">4 / 5</div>
-        <img src="img/susanna.png" style="width:100%">
-        <div class="text">Susanna grew up on the dry side of the state in Kennewick, WA before moving to Seattle nine years ago.  She spent the last four years working in a cat shelter before deciding to learn how to code at Code Fellows.  When she’s not busy learning, she can be found cuddling her three cats, crocheting, and watching Star Trek with her husband.</div>
-      </div>
-    <div class="mySlides fade">
-        <div class="numbertext">5 / 5</div>
-        <img src="img/zerek.png" style="width:100%">
-        <div class="text">My name is Zerek Cover, I am a JavaScript Developer currently enrolled at CodeFellows. I enjoy long walks on the beach through a pixelated screen while slaying dragons. My goals are to complete the CodeFellows boot camp and be the first in my family in 2 generations to truly have a trade-related career on my shoulders. I hope one day to take all of what I've learned, and be able to teach it to those around me, as well as the younger generation.</div>
-      </div>
-  
-    <!-- Next and previous buttons -->
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  </div>
-  <br>
-  
-  <!-- The dots/circles -->
-  <!-- <div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1)"></span>
-    <span class="dot" onclick="currentSlide(2)"></span>
-    <span class="dot" onclick="currentSlide(3)"></span>
-    <span class="dot" onclick="currentSlide(4)"></span>
-    <span class="dot" onclick="currentSlide(5)"></span>
-  </div> 
-	</main> -->
-	
-	<footer>
-    <!-- <script src="js/app.js" type="text/javascript"></script> -->
-    <script src="js/aboutus.js" type="text/javascript"></script>
-    <script src="js/navbar.js" type="text/javascript"></script>
-	</footer>
+<head>
+    <title>Title for my website</title>
+    <link rel="stylesheet" type="text/css" href="css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/aboutus.css" />
+</head>
+
+<body>
+    <header>
+        <nav id="navBar">
+        </nav>
+    </header>
+
+    <main>
+        <!-- Slideshow container -->
+        <div class="slideshow-container">
+
+            <!-- Full-width images with number and caption text -->
+            <div class="mySlides fade">
+                <img src="img/jon.png" style="width:100%">
+                <div class="text">My name is Jon Veach and I am a 29 year old IT professional and software developer who has spent the last 9 years of his life serving in the U.S. Navy. He lived in Japan for 6 years but can barely speak or read Japanese! In his free time,
+                    he can be found off-roading in his Suzuki Jimny or at home, developing software. My goal after completing my schooling is to get a job in Tokyo.</div>
+            </div>
+
+            <div class="mySlides fade">
+                <img src="img/peter.png" style="width:100%">
+                <div class="text">My name is Peter Carmichael and I am 26 year old software developer. Before changing careers I was a chef for the past 11 years. I hope to get a job in the area after completing Code Fellows working on UX. My main hobbies include; building
+                    large lego displays for conventions, working on my old Land Rover, and doing fun stuff outside when the weather is nice.</div>
+            </div>
+
+            <div class="mySlides fade">
+                <img src="img/sharina.png" style="width:100%">
+                <div class="text">My name is Sharina Stubbs. I am a software developer who is disturbingly fascinated by natural disasters, particularly volcanic eruptions, tsunamis and earthquakes. She is that person who will point out all the unreinforced masonry buildings
+                    (URMs) in Seattle, monitor her elevation in case of a tsunami, and stash food like a squirrel in case the world ends.</div>
+            </div>
+            <div class="mySlides fade">
+                <img src="img/susanna.png" style="width:100%">
+                <div class="text">My name is Susanna Lakey. I grew up on the dry side of the state in Kennewick, WA before moving to Seattle nine years ago. I spent the last four years working in a cat shelter before deciding to learn how to code at Code Fellows. When
+                    I'm not busy learning, I can be found cuddling my three cats, crocheting, and watching Star Trek with my husband.</div>
+            </div>
+            <div class="mySlides fade">
+                <img src="img/zerek.png" style="width:100%">
+                <div class="text">My name is Zerek Cover, I am a JavaScript Developer currently enrolled at CodeFellows. I enjoy long walks on the beach through a pixelated screen while slaying dragons. My goals are to complete the CodeFellows boot camp and be the first
+                    in my family in 2 generations to truly have a trade-related career on my shoulders. I hope one day to take all of what I've learned, and be able to teach it to those around me, as well as the younger generation.</div>
+            </div>
+
+            <!-- Next and previous buttons -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <br>
+
+        <footer>
+            <!-- <script src="js/app.js" type="text/javascript"></script> -->
+            <script src="js/aboutus.js" type="text/javascript"></script>
+            <script src="js/navbar.js" type="text/javascript"></script>
+        </footer>
 </body>
+
 </html>
