--- a/location.html
+++ b/location.html
@@ -2,60 +2,66 @@
 <html lang="en">
 
 <head>
-    <title>Location Page</title>
-    <link rel="stylesheet" type="text/css" href="css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" type="text/css" href="css/facts.css" />
-    <link rel="stylesheet" type="text/css" href="css/locations.css" />
+  <title>Location Page</title>
+  <link rel="stylesheet" type="text/css" href="css/reset.css" />
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="css/facts.css" />
+  <link rel="stylesheet" type="text/css" href="css/locations.css" />
 </head>
 
 <body>
-    <header>
-        <nav id="navBar">
-        </nav>
-        <div id="fact-container">
-        </div>
+  <header>
+    <nav id="navBar">
+    </nav>
+    <div id="fact-container">
+    </div>
+  </header>
+
+  <main id="locations-main">
+    <div id="textDescription">
+      <h1>Community Emergency Hubs are locations for people to come together to help each other after a disaster. There
+        are 135 community-run hubs in Seattle.</h1>
+    </div>
     </header>
 
-    <main id="locations-main">
-        <div id="textDescription">
-            <h1>Community Emergency Hubs are locations for people to come together to help each other after a disaster. There are 135 community-run hubs in Seattle.</h1>
+    <div id="pick-zip">
+
+      <h1>Please Pick A Seattle Zip Code</h1>
+      <h2 id="zipcode-notification"></h2>
+      <div id="input-box">
+        <fieldset>
+          <input id="zip-input" name="zipcode" type="text" />
+          <input id="zip-submit" class="button" type="submit" name="zipcodesubmit" value="Submit" />
+          <button id="show-all" class="button">Show All Locations</button>
+        </fieldset>
+      </div>
+      <h2 id="invalid-alert"></h2>
+      <div id="location-box">
+        <ul id="locationList">
+        </ul>
+        <div id="print">
+          <button class="inputbutton" onclick="window.print()">Print This Page</button>
         </div>
-    </header>
-        <div id="pick-zip">
-            <h1>Please Pick Your Zip Code</h1>
-            <h2 id="zipcode-notification"></h2>
-            <!-- random fact -->
-            <form>
-                <select id="dropdown">
-          <option value="default">[Select your Zip]</option>
-        </select>
-            </form>
+      </div>
+      <!-- iframe for map -->
 
-            <div id="location-box">
-                <ul id="locationList">
-                </ul>
-                <div id="print">
-                    <button class="inputbutton" onclick="window.print()">Print This Page</button>
-                </div>
-            </div>
-            <!-- iframe for map -->
+    </div>
+    <div id="iframediv">
+      <h1>For all Emergency Hub Locations, please see the map below.</h1>
 
-        </div>
-        <div id="iframediv">
-            <h1>For all Emergency Hub Locations, please see the map below.</h1>
+      <iframe
+        src="https://www.google.com/maps/d/embed?mid=1mtS4LK_-BMm2TqP2su-Y1cIZUOk&ll=47.606780157394645%2C-122.32876940000006&z=12"
+        width="540" height="480"></iframe>
 
-            <iframe src="https://www.google.com/maps/d/embed?mid=1mtS4LK_-BMm2TqP2su-Y1cIZUOk&ll=47.606780157394645%2C-122.32876940000006&z=12" width="540" height="480"></iframe>
+    </div>
 
-        </div>
+  </main>
 
-    </main>
-
-    <footer>
-        <script src=" js/app.js" type="text/javascript"></script>
-        <script src="js/navbar.js" type="text/javascript"></script>
-        <script src="js/facts.js" type="text/javascript"></script>
-    </footer>
+  <footer>
+    <script src=" js/app.js" type="text/javascript"></script>
+    <script src="js/navbar.js" type="text/javascript"></script>
+    <script src="js/facts.js" type="text/javascript"></script>
+  </footer>
 </body>
 
 </html>
