--- a/aboutus.html
+++ b/aboutus.html
@@ -3,10 +3,12 @@
 <html lang="en">
 
 <head>
-    <title>Title for my website</title>
+    <title>About Us</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/aboutus.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
+
 </head>
 
 <body>
