--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -2,11 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>Title for my website</title>
+    <title>Shopping List</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/facts.css" />
     <link rel="stylesheet" type="text/css" href="css/shopping.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
 </head>
 
 <body>
