--- a/location.html
+++ b/location.html
@@ -2,66 +2,65 @@
 <html lang="en">
 
 <head>
-  <title>Location Page</title>
-  <link rel="stylesheet" type="text/css" href="css/reset.css" />
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
-  <link rel="stylesheet" type="text/css" href="css/facts.css" />
-  <link rel="stylesheet" type="text/css" href="css/locations.css" />
+    <title>Location Page</title>
+    <link rel="stylesheet" type="text/css" href="css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/facts.css" />
+    <link rel="stylesheet" type="text/css" href="css/locations.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
+
 </head>
 
 <body>
-  <header>
-    <nav id="navBar">
-    </nav>
-    <div id="fact-container">
-    </div>
-  </header>
-
-  <main id="locations-main">
-    <div id="textDescription">
-      <h1>Community Emergency Hubs are locations for people to come together to help each other after a disaster. There
-        are 135 community-run hubs in Seattle.</h1>
-    </div>
+    <header>
+        <nav id="navBar">
+        </nav>
+        <div id="fact-container">
+        </div>
     </header>
 
-    <div id="pick-zip">
-
-      <h1>Please Pick A Seattle Zip Code</h1>
-      <h2 id="zipcode-notification"></h2>
-      <div id="input-box">
-        <fieldset>
-          <input id="zip-input" name="zipcode" type="text" />
-          <input id="zip-submit" class="button" type="submit" name="zipcodesubmit" value="Submit" />
-          <button id="show-all" class="button">Show All Locations</button>
-        </fieldset>
-      </div>
-      <h2 id="invalid-alert"></h2>
-      <div id="location-box">
-        <ul id="locationList">
-        </ul>
-        <div id="print">
-          <button class="inputbutton" onclick="window.print()">Print This Page</button>
+    <main id="locations-main">
+        <div id="textDescription">
+            <h1>Community Emergency Hubs are locations for people to come together to help each other after a disaster. There are 135 community-run hubs in Seattle.</h1>
         </div>
-      </div>
-      <!-- iframe for map -->
+        </header>
 
-    </div>
-    <div id="iframediv">
-      <h1>For all Emergency Hub Locations, please see the map below.</h1>
+        <div id="pick-zip">
 
-      <iframe
-        src="https://www.google.com/maps/d/embed?mid=1mtS4LK_-BMm2TqP2su-Y1cIZUOk&ll=47.606780157394645%2C-122.32876940000006&z=12"
-        width="540" height="480"></iframe>
+            <h1>Please Pick A Seattle Zip Code</h1>
+            <h2 id="zipcode-notification"></h2>
+            <div id="input-box">
+                <fieldset>
+                    <input id="zip-input" name="zipcode" type="text" />
+                    <input id="zip-submit" class="button" type="submit" name="zipcodesubmit" value="Submit" />
+                    <button id="show-all" class="button">Show All Locations</button>
+                </fieldset>
+            </div>
+            <h2 id="invalid-alert"></h2>
+            <div id="location-box">
+                <ul id="locationList">
+                </ul>
+                <div id="print">
+                    <button class="inputbutton" onclick="window.print()">Print This Page</button>
+                </div>
+            </div>
+            <!-- iframe for map -->
 
-    </div>
+        </div>
+        <div id="iframediv">
+            <h1>For all Emergency Hub Locations, please see the map below.</h1>
 
-  </main>
+            <iframe src="https://www.google.com/maps/d/embed?mid=1mtS4LK_-BMm2TqP2su-Y1cIZUOk&ll=47.606780157394645%2C-122.32876940000006&z=12" width="540" height="480"></iframe>
 
-  <footer>
-    <script src=" js/app.js" type="text/javascript"></script>
-    <script src="js/navbar.js" type="text/javascript"></script>
-    <script src="js/facts.js" type="text/javascript"></script>
-  </footer>
+        </div>
+
+    </main>
+
+    <footer>
+        <script src=" js/app.js" type="text/javascript"></script>
+        <script src="js/navbar.js" type="text/javascript"></script>
+        <script src="js/facts.js" type="text/javascript"></script>
+    </footer>
 </body>
 
 </html>
