--- a/resources.html
+++ b/resources.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/facts.css" />
     <link rel="stylesheet" type="text/css" href="css/resources.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
 </head>
 
 <body>
